--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=complaint-management-service
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://${DB_URL}
 spring.datasource.username=${DB_USERNAME}
@@ -8,3 +8,5 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
+complaints.country.api.url=https://api.country.is
